storage/minio/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: storage
  annotations:
    argocd.argoproj.io/sync-wave: "0"
